# reversed-ats-platform

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .ruff.toml  AGENTS.md  BACKLOG.md  BACKLOG_SUMMARY.md  ISSUE_TEMPLATES.md  README.md  justfile
.github/workflows/: check_prek.yaml  datacontract.yaml  deploy_databricks_producer.yml  deploy_databricks_producer_bundle.yml  scrape_smoke.yml  validate_datacontract.yaml
jitp-kafka-producer/: pyproject.toml
jitp-kafka-producer/src/producer/: __init__.py  __main__.py  pipeline.py
jitp-kafka-producer/src/producer/cli/: __init__.py
jitp-kafka-producer/src/producer/config/: settings.py
jitp-kafka-producer/src/producer/core/: __init__.py
jitp-kafka-producer/src/producer/models/: job.py  schema.py
jitp-kafka-producer/src/producer/scrapers/: __init__.py  factory.py
jitp-kafka-producer/src/producer/utils/: __init__.py  logging.py
jitp-kafka-setup/: kafbat-ui-config.yaml
rats-dashboard-api/: .env.example  README.md  pyproject.toml  vercel.json
rats-dashboard-api/api/: index.py
rats-dashboard-api/api/model_cache/models--qdrant--bge-small-en-v1.5-onnx-q/: files_metadata.json
rats-dashboard-api/api/model_cache/models--qdrant--bge-small-en-v1.5-onnx-q/refs/: main
rats-dashboard-api/api/model_cache/models--qdrant--bge-small-en-v1.5-onnx-q/snapshots/52398278842ec682c6f32300af41344b1c0b0bb2/: model_optimized.onnx
rats-dashboard-api/src/: __init__.py  config.py  dependencies.py  main.py  schemas.py  utils.py
rats-dashboard-api/src/routes/: __init__.py  health.py  jobs.py  materialize.py  predict.py
rats-dashboard-api/src/services/: __init__.py  databricks.py  vector_store.py
rats-dashboard-app/: .prettierignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prettier.config.js
rats-dashboard-app/src/app/: globals.css  layout.tsx  not-found.tsx
rats-dashboard-app/src/app/(admin)/: layout.tsx  page.tsx
rats-dashboard-app/src/app/(admin)/cv-match/: page.tsx
rats-dashboard-app/src/app/api/predict-best-match-job/: route.ts
rats-dashboard-app/src/app/api/show-all-jobs/: route.ts
rats-dashboard-app/src/components/charts/bar/: BarChartOne.tsx
rats-dashboard-app/src/components/common/: ChartTab.tsx  ComponentCard.tsx  GridShape.tsx  PageBreadCrumb.tsx  ThemeToggleButton.tsx
rats-dashboard-app/src/components/cv-match/: CVUploadCard.tsx  MatchResults.tsx
rats-dashboard-app/src/components/header/: UserDropdown.tsx
rats-dashboard-app/src/components/jobs/: JobDetailsModal.tsx  JobPostingChart.tsx  JobsMetrics.tsx  JobsTable.tsx  RemoteJobsChart.tsx
rats-dashboard-app/src/components/tables/: Pagination.tsx
rats-dashboard-app/src/components/ui/: tooltip.tsx
rats-dashboard-app/src/context/: SidebarContext.tsx  ThemeContext.tsx
rats-dashboard-app/src/icons/: index.tsx
rats-dashboard-app/src/layout/: AppHeader.tsx  AppSidebar.tsx  Backdrop.tsx  SidebarWidget.tsx
rats-dashboard-app/src/lib/: api.ts  freshness.ts
rats-dashboard-app/src/types/: api.ts
rats-dbt-transformer/: .env.example  .gitignore  README.md  databricks.yml  dbt_project.yml  profiles.yml.example  pyproject.toml
rats-dbt-transformer/deploy/databricks/resources/: jobs.yml
rats-dbt-transformer/deploy/databricks/scripts/: run_dbt.py
rats-dbt-transformer/macros/: _macros.yml
rats-dbt-transformer/models/marts/linkedin/: _linkedin__models.yml  linkedin_jobs.sql
rats-dbt-transformer/models/staging/linkedin/: _linkedin__sources.yml  _stg_linkedin__models.yml  stg_linkedin__jobs_posting.sql
rats-kafka-consumer/: .env.example  README.md  databricks.json  databricks.yml  main.py  pyproject.toml
rats-kafka-consumer/resources/: rats_kafka_consumer.job.yml
rats-kafka-consumer/src/databricks_confluent_streaming/: config.py  pipeline.py  utils.py
rats-kafka-consumer/src/databricks_confluent_streaming/jobs/confluent_to_delta/: __init__.py  helpers.py  job.py
rats-kafka-producer/: .env.example  README.md  databricks.yml  pyproject.toml
rats-kafka-producer/datacontract/: validate.py
rats-kafka-producer/datacontract/contract/com/rats/jobs/: rats.job-listings.v1.yaml
rats-kafka-producer/datacontract/schema/avro/com/rat/jobs/: rats.job-listings.v1.avsc
rats-kafka-producer/resources/: rats_kafka_producer.job.yml
rats-kafka-producer/src/producer/cli/: main.py
rats-kafka-producer/src/producer/config/: __init__.py
rats-kafka-producer/src/producer/core/: base.py  exceptions.py
rats-kafka-producer/src/producer/models/: __init__.py
rats-kafka-producer/src/producer/producers/: __init__.py  kafka_producer.py
rats-kafka-producer/src/producer/scrapers/: jobspy_scraper.py  linkedin.py
rats-kafka-producer/src/producer/utils/: browser.py
rats-kafka-producer/src/rats_kafka_producer/: __init__.py  __main__.py  cli.py  pipeline.py  schema.py
rats-kafka-producer/src/rats_kafka_producer/config/: __init__.py  models.py  schema.py  settings.py  utils.py
rats-kafka-producer/src/rats_kafka_producer/datacontract/: __init__.py  __main__.py  validate.py
rats-kafka-producer/src/rats_kafka_producer/datacontract/contract/com/rats/jobs/: rats.jobs.listing.v1.yaml
rats-kafka-producer/src/rats_kafka_producer/datacontract/schema/avro/com/rats/jobs/: rats.jobs.listing.v1.avsc
rats-kafka-producer/src/rats_kafka_producer/sinks/: __init__.py  kafka.py
rats-kafka-producer/src/rats_kafka_producer/sources/: __init__.py  linkedin.py
rats-kafka-producer/tests/: test_config_loading.py  test_job_listing_headers.py
rats-kafka-setup/: docker-compose.yaml
rats-vectordb-materializer/: .env.example  README.md  databricks.yml  pyproject.toml
rats-vectordb-materializer/resources/: rats_vectordb_materializer.job.yml
rats-vectordb-materializer/src/rats_vectordb_materializer/: __init__.py  config.py  pipeline.py  utils.py
rats-vectordb-materializer/src/rats_vectordb_materializer/jobs/: __init__.py  materialize_to_qdrant.py
(+13 files in other folders)
