[project]
name = "producer"
version = "0.1.0"
description = "End-to-end MLOps platform for job market analysis, salary prediction, and career intelligence"
requires-python = ">=3.12, <3.13"
readme = "README.md"
dependencies = [
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0", # Beautiful terminal output
    "loguru>=0.7.0", # Better logging
    "tenacity>=8.2.0", # Retry logic
    "pydantic>=2.5.0",
    "marimo[recommended]>=0.19.7",
    "seaborn>=0.13.2",
    "python-jobspy>=1.1.82",
    "confluent-kafka[avro,schemaregistry]>=2.13.0",
    "typer>=0.21.1",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",

    # Code Quality
    "ruff>=0.1.6",  # Fast linter (replaces flake8, isort, etc.)
    "mypy>=1.7.0",
    "black>=23.11.0",
    "isort>=5.12.0",

    # Pre-commit
    "pre-commit>=3.5.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/producer"]

[tool.hatch.build.targets.sdist]
packages = ["src/producer"]
