[project]
name = "databricks_confluent_streaming"
version = "0.1.1"
description = "Starter kit for building and deploying Apache Spark applications on Databricks"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "pydantic>=2.11.8",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
databricks-confluent-streaming = "databricks_confluent_streaming.pipeline:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "databricks-connect>=15.0.0",
    "databricks-cli>=0.18.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
exclude = [".venv", "build", "dist", "include"]

[tool.ruff.lint]
select = ["F", "I001", "RUF022"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_confluent_streaming"]
